# skills

./: Agents.md  README.md
.claude/: plugins
tests/: .gitignore  AGENTS.md  README.md  pyproject.toml  test_scaffolder.py
tests/harness/: copilot-client.ts  criteria_loader.py  evaluator.py  evaluator.ts  runner.py
tests/scenarios/azure-ai-anomalydetector-java/: scenarios.yaml
tests/scenarios/azure-ai-evaluation-py/: scenarios.yaml
tests/scenarios/azure-ai-inference-py/: scenarios.yaml
tests/scenarios/azure-ai-ml-py/: scenarios.yaml
tests/scenarios/azure-ai-textanalytics-py/: scenarios.yaml
tests/scenarios/azure-communication-callingserver-java/: scenarios.yaml
tests/scenarios/azure-communication-common-java/: scenarios.yaml
tests/scenarios/azure-communication-sms-java/: scenarios.yaml
tests/scenarios/azure-compute-batch-java/: scenarios.yaml
tests/scenarios/azure-containerregistry-py/: scenarios.yaml
tests/scenarios/azure-cosmos-db-py/: scenarios.yaml
tests/scenarios/azure-data-tables-py/: scenarios.yaml
tests/scenarios/azure-eventgrid-java/: scenarios.yaml
tests/scenarios/azure-keyvault-py/: scenarios.yaml
tests/scenarios/azure-messaging-webpubsub-java/: scenarios.yaml
tests/scenarios/azure-mgmt-apimanagement-py/: scenarios.yaml
tests/scenarios/azure-mgmt-fabric-py/: scenarios.yaml
tests/scenarios/azure-monitor-ingestion-java/: scenarios.yaml
tests/scenarios/azure-monitor-opentelemetry-exporter-java/: scenarios.yaml
tests/scenarios/azure-monitor-query-java/: scenarios.yaml
tests/scenarios/azure-servicebus-py/: scenarios.yaml
(+45 files in other folders)
