[project]
name = "agent-skills-tests"
version = "0.1.0"
description = "Test harness for evaluating AI-generated code against skill acceptance criteria"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Testing framework
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "pytest-cov>=4.1.0",    # Coverage reporting

    # YAML processing
    "pyyaml>=6.0.0",

    # Rich console output
    "rich>=13.0.0",

    # Development
    "ruff>=0.1.0",
    "mypy>=1.8.0",

    # Type stubs
    "types-PyYAML>=6.0.0",
]

[project.optional-dependencies]
copilot = [
    # Optional: Copilot SDK for real code generation
    # github-copilot-sdk>=0.1.0
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long - handled by formatter
